@@ -4,6 +4,7 @@
 #
 #  Updates:
 #  15-May-2022 dwp Update resource URL to new location
+#  14-Nov-2023 dwp Add functionality for fetching data via SPARQL; Add version information to cache file
 ##
 """
   Fetch glycans and glycoproteins available in the GlyGen.org resource.
@@ -16,6 +17,7 @@ import os.path
 from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.MarshalUtil import MarshalUtil
 from rcsb.utils.io.StashableBase import StashableBase
+from SPARQLWrapper import SPARQLWrapper, JSON
 
 logger = logging.getLogger(__name__)
 
@@ -38,12 +40,14 @@ class GlyGenProvider(StashableBase):
         super(GlyGenProvider, self).__init__(cachePath, [dirName])
         useCache = kwargs.get("useCache", True)
         #
-        baseUrl = kwargs.get("glygenBasetUrl", "https://data.glygen.org/ln2data/releases/data/v-1.12.3/reviewed/")
+        baseUrl = kwargs.get("glygenBasetUrl", "https://data.glygen.org/ln2data/releases/data/v-2.2.1/reviewed/")
+        # baseSparqlUrl = kwargs.get("glygenBaseSparqlUrl", "http://sparql.glygen.org:8880/sparql")
         fallbackUrl = kwargs.get("glygenFallbackUrl", "https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/master/fall_back/glygen/")
         #
         self.__mU = MarshalUtil(workPath=self.__dirPath)
-        self.__glycanD = self.__reloadGlycans(baseUrl, fallbackUrl, self.__dirPath, useCache=useCache)
+        self.__glycanD, self.__version = self.__reloadGlycans(baseUrl, fallbackUrl, self.__dirPath, useCache=useCache)
         self.__glycoproteinD = self.__reloadGlycoproteins(baseUrl, fallbackUrl, self.__dirPath, useCache=useCache)
+        # self.__glycoproteinD = self.__reloadGlycoproteinsSparql(baseSparqlUrl, fallbackUrl, self.__dirPath, useCache=useCache)
 
     def testCache(self, minGlycanCount=20000, minGlycoproteinCount=64000):
         #
@@ -64,6 +68,9 @@ class GlyGenProvider(StashableBase):
         except Exception:
             return False
 
+    def getVersion(self):
+        return self.__version
+
     def getGlycans(self):
         return self.__glycanD
 
@@ -77,7 +84,9 @@ class GlyGenProvider(StashableBase):
         #
         myDataPath = os.path.join(dirPath, "glygen-glycan-list.json")
         if useCache and self.__mU.exists(myDataPath):
-            gD = self.__mU.doImport(myDataPath, fmt="json")
+            fD = self.__mU.doImport(myDataPath, fmt="json")
+            gD = fD["data"]
+            version = fD["version"]
             logger.debug("GlyGen glycan data length %d", len(gD))
         elif not useCache:
             logger.debug("Fetch GlyGen glycan data from primary data source %s", baseUrl)
@@ -88,17 +97,24 @@ class GlyGenProvider(StashableBase):
             fU = FileUtil()
             ok = fU.get(endPoint, rawPath)
             logger.debug("Fetch GlyGen glycan data status %r", ok)
+            #
+            versionEndPoint = os.path.join(baseUrl, "release-notes.txt")
+            vL = self.__mU.doImport(versionEndPoint)
+            version = vL[0].split(" ")[0].split("v-")[-1]
+            #
             if not ok:
                 endPoint = os.path.join(fallbackUrl, "glycan_masterlist.csv")
                 ok = fU.get(endPoint, rawPath)
+                version = "1.0"
                 logger.info("Fetch fallback GlyGen glycan data status %r", ok)
             #
             if ok:
                 gD = self.__parseGlycanList(rawPath)
-                ok = self.__mU.doExport(myDataPath, gD, fmt="json")
-                logger.info("Exported GlyGen glycan list (%d) (%r) %s", len(gD), ok, myDataPath)
+                fD = {"data": gD, "version": version}
+                ok = self.__mU.doExport(myDataPath, fD, fmt="json")
+                logger.info("Exported GlyGen glycan list (%d) version (%r) (%r) %s", len(gD), version, ok, myDataPath)
             #
-        return gD
+        return gD, version
 
     def __parseGlycanList(self, filePath):
         gD = {}
@@ -120,9 +136,16 @@ class GlyGenProvider(StashableBase):
         #
         myDataPath = os.path.join(dirPath, "glygen-glycoprotein-list.json")
         if useCache and self.__mU.exists(myDataPath):
-            gD = self.__mU.doImport(myDataPath, fmt="json")
+            fD = self.__mU.doImport(myDataPath, fmt="json")
+            gD = fD["data"]
+            version = fD["version"]
             logger.debug("GlyGen glycoprotein data length %d", len(gD))
         else:
+            #
+            versionEndPoint = os.path.join(baseUrl, "release-notes.txt")
+            vL = self.__mU.doImport(versionEndPoint)
+            version = vL[0].split(" ")[0].split("v-")[-1]
+            #
             for fn in [
                 "sarscov1_protein_masterlist.csv",
                 "sarscov2_protein_masterlist.csv",
@@ -144,13 +167,15 @@ class GlyGenProvider(StashableBase):
                     endPoint = os.path.join(fallbackUrl, fn)
                     ok = fU.get(endPoint, rawPath)
                     logger.info("Fetch fallback GlyGen data status %r", ok)
+                    version = "1.0"
                 #
                 if ok:
                     tD = self.__parseGlycoproteinList(rawPath)
                     gD.update(tD)
             #
-            ok = self.__mU.doExport(myDataPath, gD, fmt="json")
-            logger.info("Exported GlyGen glycoprotein list (%d) (%r) %s", len(gD), ok, myDataPath)
+            fD = {"data": gD, "version": version}
+            ok = self.__mU.doExport(myDataPath, fD, fmt="json")
+            logger.info("Exported GlyGen glycoprotein list (%d) version (%r) (%r) %s", len(gD), version, ok, myDataPath)
         #
         return gD
 
@@ -164,3 +189,87 @@ class GlyGenProvider(StashableBase):
         except Exception as e:
             logger.exception("Failing for %r with %s", filePath, str(e))
         return gD
+
+    def __reloadGlycoproteinsSparql(self, baseSparqlUrl, dirPath, useCache=True):
+        gD = {}
+        logger.debug("Using dirPath %r", dirPath)
+        self.__mU.mkdir(dirPath)
+        #
+        myDataPath = os.path.join(dirPath, "glygen-glycoprotein-list.json")
+        if useCache and self.__mU.exists(myDataPath):
+            gD = self.__mU.doImport(myDataPath, fmt="json")
+            logger.info("GlyGen glycoprotein data length %d", len(gD))
+        else:
+            for organism, taxId in {
+                "sarscov1": "694009",
+                "sarscov2": "2697049",
+                "hcv1b": "11116",
+                "hcv1a": "63746",
+                "human": "9606",
+                "mouse": "10090",
+                "rat": "10116",
+            }.items():
+                logger.info("Fetch GlyGen glycoprotein data for organism %s taxId %s from SPARQL source %s", organism, taxId, baseSparqlUrl)
+                resultL, retL = [], []
+                offset = 0
+                retL = self.__fetchGlycoproteinListSparql(baseSparqlUrl, taxId, offset)
+                while len(retL) > 0:
+                    resultL += retL
+                    offset += len(retL)
+                    retL = self.__fetchGlycoproteinListSparql(baseSparqlUrl, taxId, offset)
+                logger.info("GlyGen glycoprotein data length (%d) for organism %s taxId %s", len(resultL), organism, taxId)
+
+                if len(resultL) > 0:
+                    tD = {}
+                    for r in resultL:
+                        ff = r.split("-")
+                        tD[ff[0]] = ff[1]
+                    gD.update(tD)
+
+            # if len(gD) < 100:
+            #     endPoint = os.path.join(fallbackUrl, fn)
+            #     ok = fU.get(endPoint, rawPath)
+            #     logger.info("Fetch fallback GlyGen data status %r", ok)
+
+            ok = self.__mU.doExport(myDataPath, gD, fmt="json")
+            logger.info("Exported GlyGen glycoprotein list (%d) (%r) %s", len(gD), ok, myDataPath)
+        return gD
+
+    def __fetchGlycoproteinListSparql(self, baseSparqlUrl, taxId, offset):
+        retL = []
+        try:
+            # Set the SPARQL endpoint
+            sparql = SPARQLWrapper(baseSparqlUrl)
+
+            # Define the SPARQL query
+            query = f"""
+            PREFIX glycan: <http://purl.jp/bio/12/glyco/glycan#>
+            PREFIX up: <http://purl.uniprot.org/core/>
+            PREFIX gly:<https://sparql.glygen.org/ontology/>
+            PREFIX skos:<http://www.w3.org/2004/02/skos/core#>
+            SELECT DISTINCT ?isoform_uri
+            WHERE {{
+                ?glycoprotein_uri up:sequence ?isoform_uri .
+                ?protein_uri up:sequence ?isoform_uri .
+                ?protein_uri up:organism <http://purl.uniprot.org/taxonomy/{taxId}> .
+                ?isoform_uri gly:canonical "true"^^<http://www.w3.org/2001/XMLSchema#boolean> .
+            }}
+            LIMIT 10000 OFFSET {offset}
+            """
+
+            # Set the query and the return format
+            sparql.setQuery(query)
+            sparql.setReturnFormat(JSON)
+
+            # Execute the query
+            results = sparql.query().convert()
+
+            # Process the results
+            for result in results["results"]["bindings"]:
+                isoformUri = result["isoform_uri"]["value"]
+                retL.append(isoformUri.split("/")[-1])
+
+        except Exception as e:
+            logger.exception("Failing for taxId %s offset with %s with %s", taxId, offset, str(e))
+
+        return retL
